--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -54,6 +54,13 @@ li {
     margin: 0 auto;
 }
 
+h1 {
+    font-weight: 700;
+    font-size: 96px;
+    line-height: 144px;
+    text-align: center;
+}
+
 h2 {
     font-weight: 500;
     font-size: 40px;
