--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,34 +1,77 @@
 .header {
     height: 100vh;
     background: url('../images/travelTime.png') center center/cover no-repeat;
-}
-
-.header__nav {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 80px;
-    &-link a {
-        cursor: pointer;
-        position: relative;
+    &__nav {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 80px;
+        &-link a {
+            cursor: pointer;
+            position: relative;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 36px;
+            color: #fff;
+        }
+        &-link a::after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            width: 0;
+            height: 3px;
+            background-color: #fff;
+            opacity: .5;
+            transition: width 0.3s ease-out;
+            border-radius: 2px;
+        }
+        &-link a:hover:after,
+        &-link a:focus:after {
+            width: 100%;
+        }
+    }
+    &__title {
+        margin-top: 100px;
+        &-text {
+            margin: 0 auto;
+            max-width: 750px;
+            text-align: center;
+            font-size: 24px;
+            line-height: 36px;
+            text-align: center;
+            color: #FFFFFF;
+            opacity: .5;
+        }
+    }
+    &__btn {
+        width: 191px;
+        height: 60px;
+        color: #fff;
+        padding: 16px 28px;
+        background: #00B43D;
+        box-shadow: 0 0 40px 40px #00B43D inset, 0 0 0 0 #00B43D;
+        -webkit-transition: all 150ms ease-in-out;
+        transition: all 130ms ease-in-out;
+        border-radius: 8px;
         font-weight: 500;
         font-size: 24px;
-        line-height: 36px;
-        color: #fff;
-    }
-    &-link a::after {
-        content: "";
+        line-height: 28px;
+        cursor: pointer;
         display: block;
-        position: absolute;
-        left: 0;
-        width: 0;
-        height: 3px;
-        background-color: #fff;
-        opacity: .5;
-        transition: width 0.3s ease-out;
-        border-radius: 2px;
+        margin: 0 auto;
+        margin-top: 370px;
+        outline: 0;
+        &:hover {
+            box-shadow: 0 0 10px 0 #4dd57a inset, 0 0 10px 4px #4dd57a;
+        }
+        &:active {
+            background: #2ba253;
+            padding: 18px 30px;
+        }
     }
-    &-link a:hover:after,
-    &-link a:focus:after {
-        width: 100%;
-    }
+}
+
+.Arton {
+    display: flex;
+    justify-content: center;
 }
