--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,6 @@
 .header {
     height: 100vh;
-    background: url('../images/travelTime.png') center center/cover no-repeat;
+    background: url('../images/header-bg.jpg') center center/cover no-repeat;
     &__nav {
         display: flex;
         justify-content: space-between;
@@ -12,6 +12,7 @@
             font-size: 24px;
             line-height: 36px;
             color: #fff;
+            animation: move 1s ease-in-out;
         }
         &-link a::after {
             content: "";
@@ -32,7 +33,8 @@
     }
     &__title {
         margin-top: 100px;
-        &-text {
+        animation: move 1.5s ease-in-out;
+        &-text p {
             margin: 0 auto;
             max-width: 750px;
             text-align: center;
@@ -40,7 +42,9 @@
             line-height: 36px;
             text-align: center;
             color: #FFFFFF;
+            font-weight: 400;
             opacity: .5;
+            animation: move 1s ease-in-out;
         }
     }
     &__btn {
@@ -61,6 +65,7 @@
         margin: 0 auto;
         margin-top: 370px;
         outline: 0;
+        animation: move .5s ease-in-out;
         &:hover {
             box-shadow: 0 0 10px 0 #4dd57a inset, 0 0 10px 4px #4dd57a;
         }
@@ -74,4 +79,73 @@
 .Arton {
     display: flex;
     justify-content: center;
+}
+
+.gallery {
+    background: rgb(149, 149, 149);
+    padding: 126px 132px;
+    &__items {
+        margin-top: 50px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__card {
+        width: 320px;
+        height: 586px;
+        background: rgba(88, 88, 88, 0.5);
+        padding: 24px 30px;
+        &-img img {
+            width: 100%;
+        }
+        &-title {
+            font-weight: 500;
+            font-size: 32px;
+            line-height: 48px;
+            margin-top: 16px;
+        }
+        &-description {
+            font-weight: 300;
+            font-size: 17px;
+            line-height: 24px;
+            opacity: .8;
+        }
+        &-btn {
+            margin-top: 34px;
+            margin-left: auto;
+            box-shadow: 0 0 40px 40px #4e4e4e73 inset, 0 0 0 0 #4e4e4e73;
+            -webkit-transition: all 150ms ease-in-out;
+            transition: all 130ms ease-in-out;
+            cursor: pointer;
+            text-align: center;
+            width: 100px;
+            height: 39px;
+            background: #4e4e4e73;
+            border-radius: 8px;
+            padding: 6px 17px;
+            font-weight: 500;
+            font-size: 11px;
+            line-height: 28px;
+            &:hover {
+                box-shadow: 0 0 10px 0 #42424273 inset, 0 0 10px 4px #42424273;
+            }
+            &:active {
+                background: #4e4e4e73;
+                padding: 8px 19px;
+            }
+        }
+    }
+}
+
+
+/* Animations */
+
+@keyframes move {
+    0% {
+        opacity: 0;
+        transform: translateY(-400px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
