--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,4 +1,5 @@
 body {
+    position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     padding: 0;
@@ -50,8 +51,9 @@ li {
 }
 
 .container {
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 h1 {
