--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,10 +1,10 @@
 .header {
-    height: 100vh;
+    min-height: 100vh;
     background: url('../images/header-bg.jpg') center center/cover no-repeat;
+    padding: 80px 80px;
     &__nav {
         display: flex;
         justify-content: space-between;
-        padding-top: 80px;
         &-link a {
             cursor: pointer;
             position: relative;
@@ -91,7 +91,7 @@
     &__items {
         margin-top: 50px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
     }
     &__card {
         width: 320px;
@@ -161,6 +161,139 @@
         font-size: 32px;
         line-height: 48px;
         opacity: .7;
+    }
+}
+
+.mobile {
+    transition: .3s all;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .6);
+    width: 100%;
+    min-height: 100vh;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 44px 15px 32px 38px;
+    &__nav {
+        &-link {
+            margin-bottom: 20px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        a {
+            color: #fff;
+        }
+        font-size: 30px;
+    }
+}
+
+.mobile-active {
+    left: 0%;
+}
+
+.mobile-disactive {
+    left: 100%
+}
+
+.hidden {
+    display: none;
+}
+
+
+/* Media */
+
+@media (max-width: 1300px) {
+    .gallery {
+        &__card {
+            width: 283px;
+            height: 554px;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .gallery {
+        &__card {
+            width: 310px;
+            height: 540px;
+            padding: 18px 24px;
+            &-title {
+                font-size: 31px;
+                margin-top: 13px;
+            }
+            &-btn {
+                margin-top: 16px;
+            }
+        }
+    }
+    .about {
+        padding: 32px 28px;
+        &__text {
+            padding-top: 23px;
+            font-size: 26px;
+            line-height: 45px;
+        }
+    }
+}
+
+@media (max-width: 1000px) {
+    .gallery {
+        &__card {
+            width: 261px;
+            height: 456px;
+            &-title {
+                font-size: 29px;
+                margin-top: 4px;
+            }
+            &-description {
+                font-size: 14px;
+                line-height: 20px;
+            }
+        }
+    }
+    .header {
+        &__title {
+            margin-top: 70px;
+            font-size: 90px;
+            &-text {
+                font-size: 22px;
+                margin: 0 auto;
+                max-width: 600px;
+            }
+        }
+    }
+}
+
+@media (max-width: 840px) {
+    .header {
+        &__nav {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .gallery {
+        padding: 60px 10px;
+        &__card {
+            width: 255px;
+            height: 400px;
+            &-title {
+                font-size: 26px;
+                margin-top: 0px;
+            }
+            &-description {
+                font-size: 12px;
+                line-height: 18px;
+            }
+            &-btn {
+                margin-top: 8px;
+            }
+        }
     }
 }
 
