--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -168,18 +168,20 @@
     transition: .3s all;
     position: fixed;
     top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, .6);
+    right: 100%;
+    background-color: rgba(0, 0, 0, .85);
     width: 100%;
     min-height: 100vh;
     z-index: 100;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     padding: 44px 15px 32px 38px;
+    align-items: center;
+    text-align: center;
     &__nav {
         &-link {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             &:last-child {
                 margin-bottom: 0;
             }
@@ -191,12 +193,37 @@
     }
 }
 
-.mobile-active {
-    left: 0%;
+.mobile__menu-btn {
+    animation: moveFromLeft .35s ease-in-out;
+    display: none;
+    opacity: .8;
+    width: 30px;
+    cursor: pointer;
+    height: 30px;
+    position: relative;
+    z-index: 199;
+    overflow: hidden;
+    span {
+        width: 30px;
+        height: 3px;
+        position: absolute;
+        background-color: #fff;
+        transition: all .5s;
+        &:nth-of-type(2) {
+            top: calc(50% - 5px)
+        }
+        &:nth-of-type(3) {
+            top: calc(50% + 5px)
+        }
+    }
 }
 
-.mobile-disactive {
-    left: 100%
+.active {
+    right: 0%
+}
+
+.disactive {
+    left: 0%
 }
 
 .hidden {
@@ -211,6 +238,14 @@
         &__card {
             width: 283px;
             height: 554px;
+        }
+    }
+    .about {
+        padding: 54px 125px;
+        &__text {
+            padding-top: 0px;
+            font-size: 29px;
+            line-height: 46px;
         }
     }
 }
@@ -269,6 +304,9 @@
 }
 
 @media (max-width: 840px) {
+    .mobile__menu-btn {
+        display: block;
+    }
     .header {
         &__nav {
             display: none;
@@ -304,6 +342,17 @@
     0% {
         opacity: 0;
         transform: translateY(-400px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveFromLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-400px);
     }
     100% {
         opacity: 1;
